--- a/front-end_2A_2T_24_mayk.html
+++ b/front-end_2A_2T_24_mayk.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nao sei oque to fazendo</title>
+    <title>Ratatui bombado</title>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
 <style>
