--- a/front-end_2A_2T_24_mayk.html
+++ b/front-end_2A_2T_24_mayk.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
 <style>
     body{
-        background: linear-gradient(to bottom, #80f7bd, #dac1c1);
+        background: linear-gradient(to bottom, #ffffff, #ffffff);
     }
     <iframe width="560" height="315" src="https://www.youtube.com/embed/h2QLpFeY1PY?si=p15RfZvzr4nu8iJY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
    
@@ -51,7 +51,7 @@
         float: center;
     }
     header {
-        background-color: #b6bbb9;
+        background-color: #ffffff;
         color: white;
         text-align: center;
     }
@@ -76,12 +76,12 @@
 </header>
 <main>
     <section class="content">
-        <img src="https://www.landrin.com.br/upload/pragas_5_66_1538744895.jpg" alt="Ratatui" class="logo" width="179">
-        <h2>gecko/geko</h2>
-        <p>gecko ou geko, é um lagatin muito fofo e que você pode ter de estimação</p>
+        <img src="https://rollingstone.com.br/media/uploads/ratatouille-foto-divulgacao-pixar.jpg" alt="Ratatui" class="logo" width="179">
+        <h2>Ratatui</h2>
+        <p>Ratatui, é um rato fofo que trabalha em um restaurante</p>
         <p></p>
-        <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4289.0753570120605!2d2.292988030845119!3d48.85765983344252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2zUGFyaXMsIEZyYW7Dp2E!5e0!3m2!1spt-BR!2sbr!4v1724944784854!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/G3lSONLLx70?si=VIf03aD69_tiSr86" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4289.0753570120605!2d2.292988030845119!3d48.85765983344252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2zUGFyaXMsIEZyYW7Dp2E!5e0!3m2!1spt-BR!2sbr!4v1724944784854!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/G3lSONLLx70?si=VIf03aD69_tiSr86" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 </main>
 <footer>
